Add icons in sidebar plus text copied svgs to place icons on sidebar

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,9 @@
     background-color: #0ea5e9;
     color: black;
 }
-.white{
-    background-color: black;
+.icon-side{
+    width: 40px;
+}
+.dash-icon{
+    width: 60px;
 }
