--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 *{
     margin: 0;
     padding: 0;
+}
+body{
+    font-family: Roboto, sans-serif;
 }
 .grid{
     display: grid;
@@ -9,11 +13,40 @@
 }
 .sidebar{
     background-color: #0ea5e9;
-    color: black;
+    color: white;
 }
 .icon-side{
-    width: 40px;
+    width: 33px;
 }
 .dash-icon{
-    width: 60px;
+    width: 70px;
+}
+.dashboard{
+    display: flex;
+    flex-direction: row;
+    margin: 15px;
+}
+#dash-text{
+    margin-top: 15px;
+    margin-left: 15px;
+}
+.list-items{
+  margin-top: 40px;
+  margin-left: 36px;
+}
+.list-item{
+    display: flex;
+    flex-direction: row;
+    margin-top: 10px;
+}
+.icon-text{
+    margin-left: 18px;
+    font-size: 22px;
+    font-weight: 500;
+    margin-top: 6px;
+}
+
+.list-item-bottom{
+    margin-top: 55px;
+    margin-left: 36px;
 }
