--- a/styles.css
+++ b/styles.css
@@ -19,16 +19,17 @@ body{
     width: 33px;
 }
 .dash-icon{
-    width: 70px;
+    width: 50px;
 }
 .dashboard{
     display: flex;
     flex-direction: row;
-    margin: 15px;
+    margin: 18px 30px;
 }
 #dash-text{
-    margin-top: 15px;
-    margin-left: 15px;
+    margin-top: 8px;
+    margin-left: 8px;
+    font-size: 25px;
 }
 .list-items{
   margin-top: 40px;
@@ -41,7 +42,7 @@ body{
 }
 .icon-text{
     margin-left: 18px;
-    font-size: 22px;
+    font-size: 20px;
     font-weight: 500;
     margin-top: 6px;
 }
@@ -49,4 +50,17 @@ body{
 .list-item-bottom{
     margin-top: 55px;
     margin-left: 36px;
+}
+.main{
+    display: grid;
+    grid-template-rows: 20% 80%;
+    width: 100%;
+}
+.main-top{
+   background-color: white; 
+   width: 100vw;
+}
+.main-bottom{
+    background-color:  rgb(226, 221, 221);
+    width: 100vw;
 }
