--- a/styles.css
+++ b/styles.css
@@ -64,3 +64,35 @@ body{
     background-color:  rgb(226, 221, 221);
     width: 100vw;
 }
+#search-input{
+    border-radius: 10px;
+    height: 20px;
+    width: 600px;
+    border: 1px solid grey;
+    background-color:rgb(226, 221, 221);
+    margin-left: 20px;
+}
+img{
+    width: 80px;
+    border-radius: 50%;
+    border: 1px solid black;
+    margin-left: 50px;
+    margin-right: 60px;
+}
+.main-top{
+    display: flex;
+    flex-direction: row;
+    justify-items: center;
+    align-items: center;
+    margin-bottom: 90px;
+    margin-left: 50px;
+}
+.main-top2{
+    display: flex;
+    margin-left: 380px;
+
+}
+#profile-name{
+    margin-top: 20px;
+    font-size: 25px;
+}
